welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var tailleY:Int = getMondeHauteur()
  var tailleX:Int = getMondeLargeur()
  var tabColor:Array[Color](tailleY)
  for (i <- 0 to tailleY - 1){
    tabColor(i) = getColorSol()
    avance()
  }
  
  
}